--- a/message-app/index.html
+++ b/message-app/index.html
@@ -33,8 +33,24 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </button>
                 <span class="options">
-                    <!-- <li>Find</li>
-                    <li>Clear Chat</li> -->
+                    <li class="option-color">
+                        <span>Renk Seç</span>
+                        <input id="user-color-picker" type="color">
+                        <span class="user-color-picker">
+                            <span data-color="#25263b"></span>
+                            <span data-color="#849fdb"></span>
+                            <span data-color="#80dba0"></span>
+                            <span data-color="#751a58"></span>
+                            <span data-color="#e17f0e"></span>
+                            <span data-color="#e1adad"></span>
+                            <span data-color="#000000"></span>
+                            <span data-color="#ffffff"></span>
+                            <label for="user-color-picker">Özel renk seç</label>
+                        </span>
+                    </li>
+                    <li>
+                        <input id="user-photo-picker" type="file" accept="image/*">
+                        <label for="user-photo-picker">Profil fotoğrafı ekle</label></li>
                     <li>Kağan Özer</li>
                 </span>
             </span>
