Bug-Fix on sending images

--- a/message-app/index.html
+++ b/message-app/index.html
@@ -51,7 +51,9 @@
                     <li>
                         <input id="user-photo-picker" type="file" accept="image/*">
                         <label for="user-photo-picker">Profil fotoğrafı ekle</label></li>
-                    <li>Kağan Özer</li>
+                    <li class="github-link">
+                        <a href="https://kaganozer.github.io">Kağan Özer <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </li>
                 </span>
             </span>
         </div>
