Added admin accounts, bot commands, message formatting Changed id system

--- a/message-app/index.html
+++ b/message-app/index.html
@@ -90,6 +90,10 @@
             </div>
         </div>
         <div class="container-footer">
+            <span class="message-typing">
+                <span class="typing-users"></span>
+                <span>yazıyor...</span>
+            </span>
             <span class="photo-preview">
                 <span class="preview-settings">
                     <span class="change-photo">
